# cs-group-b

./: README.md  api.yaml  docker-compose-prod.yml  docker-compose.yml
backend/: Dockerfile  app.py  config.ini  pyproject.toml  utils.py
code/: app.py
code/templates/: index.html  peggy.html  victor.html
docs/: Protocol Sequence (not cleaned up, not final).md  README.md  Server_Setup.md  sequence_diagram.md
docs/meeting-notes/: 2025-05-07-online-meeting.md  2025-05-13-Short-discussion-with-cap.md
frontend/: Dockerfile  Dockerfile-prod  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: api.yaml
frontend/src/: App.vue
frontend/src/components/: InfoModal.vue
frontend/src/helpers/: api.js  demo_values.json  socket.js  userInfo.js  utility.js
frontend/src/layouts/: BaseLayout.vue
frontend/src/router/: index.js
frontend/src/views/: HomeView.vue  Peggy.vue  PeggyView.vue  PeggyView_ExistingUser.vue  PeggyView_RegisterAsPeggy.vue  Victor.vue  VictorView.vue  home.vue
frontend/src/views/docs/: api.vue
frontend/src/views/peggy/: existing-user.vue  index.vue  register.vue
frontend/src/views/prover/: existing-user.vue  index.vue  register.vue  user.vue  verify-user.vue
frontend/src/views/verifier/: index.vue  select-partner.vue
julia_frontend_first-idea/: .eslintrc.js  .gitignore  README.md  notes_code.md  notes_setup.md  package-lock.json  package.json
julia_frontend_first-idea/src/: App.vue
julia_frontend_first-idea/src/assets/: sources_images.txt
julia_frontend_first-idea/src/components/: FFSDemo.vue
(+1 files in other folders)
