[project]
name = "flask-backend"
version = "0.1.0"
description = "Flask backend to faciliate converstation between client nodes; Trusted third party server"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "The Unilicense"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "pycryptodome (>=3.23.0,<4.0.0)",
    "flask-socketio (>=5.5.1,<6.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true

[tool.pyright]
venvPath = "."
venv = ".venv"
